Validate to the ansible_hostname

--- a/tasks/03_validate_k3s.yml
+++ b/tasks/03_validate_k3s.yml
@@ -4,7 +4,7 @@
   block:
   - name: Get kubectl node status
     command:
-      cmd: "kubectl get node"
+      cmd: "kubectl get node {{ansible_hostname}}"
     register: kubestl_status
   
   - name: Fail if status is "No resources found"
