--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -67,27 +67,19 @@ install:
 
     # CLI options passed directly to install script "as-is":
     cli_options:
-      # When a K3S_TOKEN is defined at cluster creation, this will enable the Embedded etcd
-      # multi-master HA mode (which requires an odd number of control nodes 3 or 5).
-
-      # For a SINGLE NODE install where you don't plan to add more nodes, then SQLlite can be
-      # would be used instead of "embedded etcd".  To use HA in the future, you will want the
-      # Embedded etcd multi-master HA mode enabled now.
-      
       # Define it below or in the inventory file or group vars file.
-      - "K3S_TOKEN={{K3S_TOKEN}}"
+      - "K3S_TOKEN={{K3S_TOKEN}}|default('top_secret')"
 
       # Do not start service after installation as it will have issues with ZFS
       - "INSTALL_K3S_SKIP_START=true"
       
       # This is to pin a specific version of k3s for initial installation
-      # - INSTALL_K3S_VERSION=
+      - "INSTALL_K3S_VERSION=v1.23.4+k3s1"
       
       # Select installation channel to use (stable, latest, testing)
-      - "INSTALL_K3S_CHANNEL=latest"
-      # Send Flags to K3s Service
-  
-    # Becomes the "INSTALL_K3S_EXEC=" parameter
+      # - "INSTALL_K3S_CHANNEL=latest"
+
+    # This becomes the "INSTALL_K3S_EXEC=" CLI parameter
     k3s_exec_options:  
       - "{{k3s_cli_var|default('')}}"         # Options set in inventory or hosts vars
       - "--container-runtime-endpoint unix:///run/containerd/containerd.sock"
