--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,6 +26,7 @@
       - rsyslog.yml
       - k3s.yml
       - containerd.yml
+      - kube_vip.yml
       - metallb.yml
       - helm.yml
       - cert_manager.yml
@@ -45,27 +46,27 @@
 ###################################################################################################
 
 ###[ Detect & Capture Node Token when available ]##################################################
-- name: Check if node-token file exists
-  stat:
-    path: "{{k3s.node_token_path}}"
-  register: node_token_file
-  tags: ["always"]
+#- name: Check if node-token file exists
+#  stat:
+#    path: "{{k3s.node_token_path}}"
+#  register: node_token_file
+#  tags: ["always"]
   
-- name: Get Node Token and Add to Facts Block
-  block:
-  - name: Gather Node Token
-    slurp:
-      path: "{{k3s.node_token_path}}"
-    register: node_token_output
-    no_log: "{{no_log_secrets|default(true)}}"
-    when: node_token_file.stat.exists == true
+#- name: Get Node Token and Add to Facts Block
+#  block:
+#  - name: Gather Node Token
+#    slurp:
+#      path: "{{k3s.node_token_path}}"
+#    register: node_token_output
+#    no_log: "{{no_log_secrets|default(true)}}"
+#    when: node_token_file.stat.exists == true
 
-  - name: Clean and add node_token to facts
-    set_fact:
-      node_token: "{{ node_token_output.content | b64decode | regex_replace('\n', '')}}"
-    no_log: "{{no_log_secrets|default(true)}}"
-    when: node_token_file.stat.exists == true
-  tags: ["always"]
+#  - name: Clean and add node_token to facts
+#    set_fact:
+#      node_token: "{{ node_token_output.content | b64decode | regex_replace('\n', '')}}"
+#    no_log: "{{no_log_secrets|default(true)}}"
+#    when: node_token_file.stat.exists == true
+#  tags: ["always"]
 ###################################################################################################
 
 - name: Include Task Files
@@ -73,8 +74,10 @@
   tags: ["always"]
   loop:
     - 00_config_rsyslog.yml
+    - 00-3_create_non_root_user.yml
     - 01_install_k3s.yml
     - 02_install_containerd.yml
+    - 02-5_install_kube_vip.yml
     - 03_validate_k3s.yml
     - 03-5_install_metallb.yml
     - 04_install_helm_client.yml
