--- a/tasks/06_install_kube_vip.yml
+++ b/tasks/06_install_kube_vip.yml
@@ -25,9 +25,24 @@
       dest: "{{k3s.manifests_path}}/kube-vip.yaml"
       mode: '0640'
 
+  - name: Check if Kube-VIP API HA Pod Running
+    k8s_info:
+      kind: Pod
+      namespace: "kube-system"
+      label_selectors:
+        - "app.kubernetes.io/name=kube-vip-ds"
+      wait: yes
+      wait_condition:
+        type: Ready
+      wait_sleep: 5
+      wait_timeout: 120
+
   when: 
      - ansible_host == hostvars[groups['k3s_control'][0]]['ansible_host'] | default(groups['k3s_control'][0])
      - install.kube_vip.enabled|default(false)|bool == true
+
+  tags:
+    - install_kube_vip
 
 ###[ Install Kube-VIP Cloud Provider Load Balancer Block ]#####################
 - name: Install Kube-VIP Cloud Provider Load Balancer Block
@@ -65,6 +80,19 @@
     kubernetes.core.k8s:
       state: present
       src: "/home/{{install.os.non_root_user.name}}/kube-vip/cloud-controller.yaml"
+
+  - name: Check if Kube-VIP Cloud Provider Pod Running
+    k8s_info:
+      kind: Pod
+      namespace: "kube-system"
+      label_selectors:
+        - "app=kube-vip"
+        - "component=kube-vip-cloud-provider"
+      wait: yes
+      wait_condition:
+        type: Ready
+      wait_sleep: 5
+      wait_timeout: 120
 
   when: 
      - ansible_host == hostvars[groups['k3s_control'][0]]['ansible_host'] | default(groups['k3s_control'][0])
