--- a/tasks/07_install_cert_manager.yml
+++ b/tasks/07_install_cert_manager.yml
@@ -25,10 +25,18 @@
 # $ kubectl describe crd clusterissuers.cert-manager.io
 # Error from server (NotFound): customresourcedefinitions.apiextensions.k8s.io "clusterissuers.cert-manager.io" not found
 
+  - name: Create Directory for Cert-Manager Configuration
+    file:
+      path: "/home/{{install.os.non_root_user.name}}/cert-manager"
+      state: directory
+      mode: 0750
+      owner: "{{install.os.non_root_user.name}}"
+      group: "{{install.os.non_root_user.name}}"
+
   - name: Fetch Static Manifest to Install Cert-Manager
     ansible.builtin.get_url:
       url: "{{cert_manager.install_url}}"
-      dest: "/home/{{install.os.non_root_user.name}}/cert-manager-{{install.cert_manager.install_version}}-manifest.yaml"
+      dest: "/home/{{install.os.non_root_user.name}}/cert-manager/cert-manager-{{install.cert_manager.install_version}}-manifest.yaml"
       mode: '0664'
       owner: "{{install.os.non_root_user.name}}"
       group: "{{install.os.non_root_user.name}}"
@@ -42,9 +50,48 @@
   - name: Install Cert-manager via static Manifest
     kubernetes.core.k8s:
       state: present
-      src: "/home/{{install.os.non_root_user.name}}/cert-manager-{{install.cert_manager.install_version}}-manifest.yaml"
+      src: "/home/{{install.os.non_root_user.name}}/cert-manager/cert-manager-{{install.cert_manager.install_version}}-manifest.yaml"
       wait: yes
       wait_timeout: 300
+
+  - name: Check if Cert-Manager Controller Pod Running
+    k8s_info:
+      kind: Pod
+      namespace: "cert-manager"
+      label_selectors:
+        - "app=cert-manager"
+        - "app.kubernetes.io/component=controller"
+      wait: yes
+      wait_condition:
+        type: Ready
+      wait_sleep: 5
+      wait_timeout: 120
+
+  - name: Check if Cert-Manager CA Injector Pod Running
+    k8s_info:
+      kind: Pod
+      namespace: "cert-manager"
+      label_selectors:
+        - "app=cainjector"
+        - "app.kubernetes.io/component=cainjector"
+      wait: yes
+      wait_condition:
+        type: Ready
+      wait_sleep: 5
+      wait_timeout: 120
+
+  - name: Check if Cert-Manager Webhook Pod Running
+    k8s_info:
+      kind: Pod
+      namespace: "cert-manager"
+      label_selectors:
+        - "app=webhook"
+        - "app.kubernetes.io/component=webhook"
+      wait: yes
+      wait_condition:
+        type: Ready
+      wait_sleep: 5
+      wait_timeout: 120
 
   tags:
     - install_cert_manager
