--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -10,3 +10,9 @@
     daemon_reload: yes
     state: started
     name: k3s
+
+- name: Restart rsyslog service
+  ansible.builtin.systemd:
+    daemon_reload: yes
+    state: restarted
+    name: rsyslog
